--- a/internal/views/admin/index.html
+++ b/internal/views/admin/index.html
@@ -12,9 +12,9 @@
     <script src="/static/libs/bootstrap/js/bootstrap.min.js"></script>
     <script>
         var pageCount = {{.pageCount}};
-        var currentPage = {{.current_page}};
-        var page_type = {{.page_type}}
-        var key_word = {{.key_word}}
+        var currentPage = {{.currentPage}};
+        var page_type = {{.pageType}}
+        var key_word = {{.keyWord}}
     </script>
     <!-- 分页 -->
     <script src="/static/js/index_articles.js"></script>
