--- a/internal/views/user/show_user.html
+++ b/internal/views/user/show_user.html
@@ -50,11 +50,11 @@
     <div class="row ">
         <div class="col-md-8">
             <div class="col-md-2 ">
-                <img src="{{.current_user.ProfilePhoto}}" alt="..." class="img-circle" data-toggle="dropdown"
+                <img src="{{.currentUser.ProfilePhoto}}" alt="..." class="img-circle" data-toggle="dropdown"
                      style="width: 80px;height: 80px;">
             </div>
             <div class="col-md-6">
-                <h3>{{.current_user.Username}}</h3>
+                <h3>{{.currentUser.Username}}</h3>
                 关注 ｜ 粉丝 ｜ 文章 ｜ 收获喜欢
 
             </div>
