--- a/internal/views/user/_user_collect_articles.html
+++ b/internal/views/user/_user_collect_articles.html
@@ -1,7 +1,7 @@
 {{define "_user_collect_articles.html"}}
     <script>
         var pageCount = {{.pageCount}};
-        var currentPage = {{.current_page}};
+        var currentPage = {{.currentPage}};
     </script>
     <!-- 分页 -->
     <script src="/static/js/user_collect_articles.js"></script>
